# aitrios-rpi-training-samples

./: .gitignore  Dockerfile  FAQ.md  LICENSE  README.md  docker-build.sh  docker-run.sh  pyproject.toml  setup.py
samples/: mobilenet_v2_as_is.ini  mobilenet_v2_card.ini  mobilenet_v2_cifar10.ini  nanodet_plus_as_is.ini  nanodet_plus_card.ini
samples/config/: nanodet-plus-m-1.5x_416_card.yml
src/imx500_zoo/: __init__.py  imx500_zoo.py
src/imx500_zoo/datasets/: __init__.py  albu_imagefolder.py  card_classification.py  card_detection.py  cifar10.py  coco_val2017.py  imagenet.py
src/imx500_zoo/models/: __init__.py  mobilenet_v2.py  nanodet_plus.py
src/imx500_zoo/quantizers/: __init__.py  mct_keras.py  mct_torch.py
src/imx500_zoo/trainers/: __init__.py  classification_trainer.py  nanodet_plus_trainer.py
src/imx500_zoo/utilities/: __init__.py  conv.py  download.py  dump_json.py  third_party.py
src/imx500_zoo/validators/: __init__.py  keras_object_detection_validator.py  onnx_classification_validator.py
